    {+} Detection for RaidenFTPD sites added (#231)
    {+} (internal) SITE FEAT response parsing (#237)
    {+} Some unit tests are added, please help to add more!
    {+} Wildcard support for !setsocks5 SITE (#234)
    {+} Wildcard support for !autoinvite (#247)
    {+} Make TV-releases skippable for iMDB lookups (#232)
    {+} Optimized code for release language detection (slftp.languagebase)
    {+} Support for rules-checking in !batch,!spread,!check,!pre cmds for groups
    {+} New rules tvlookupdone and imdblookupdone (#67)
    {+} !rulecp can now copy rules to a differently named target section (#249)
    {+} New rule tvrating analog to imdbrating (#228)
    {#} Fixed !routelock so it doesn't remove normal route when removing lock
    {#} precmd can be removed by omiting precommand via !setprecmd (#178)
    {#} Remove language and 2160(p|i) tags before searching on TVmaze
    {#} Correct counting and comparing of CRC errors in TPazoRaceTask
    {#} Missing built-in skip features from slftp.skip added (#195)
    {#} Saving TVInfo for some shows containing ' in its name (#191, #196)
    {#} Double free of TNukeQueueItem (#203)
    {#} !batch looses sites in bnctest output over time (#216)
    {#} !prelist parameter count (#212)
    {#} Fix !prelist for arbitrary PRE-sections and improve error handling (#212)
    {#} Don't require PRE sections to be configured in precatcher (#182)
    {#} Wrong mp3genre detected on IRC announce (#114)
    {#} !raw command timeout/error handling (#225)
    {#} !slots command didn't supported showing of siteslots for all sites (#230)
    {#} Addpre event received after a NEWDIR will now correctly update kb with the pretime and recalc routes
    {#} Converting error in TVMaze lookup if webChannel exists but Country was null (#233)
    {#} Logging of categories which are specified as value for debugging works now
    {#} Replacing of <yyyy>, <yy>, <mm>, ... identifiers for sectiondir was missed in some places